--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -22,7 +22,7 @@
     android:layout_height="match_parent">
 
     <fragment
-        android:name="com.example.android.tvleanback.ui.MainFragment"
+        android:name="se.expressen.tvleanback.ui.MainFragment"
         android:id="@+id/main_browse_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
